Kubernetes/registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:2
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: name_for_authentication_volume
          mountPath: /path/to/authentication/folder #you can custom this
          readOnly: true
      volumes:
      - name: auth
        secret:
          secretName: regcred
